fix spacing a bit more

--- a/src/demo/css/theme-easy-eye.css
+++ b/src/demo/css/theme-easy-eye.css
@@ -92,7 +92,6 @@ lipstick-form {
 
   & fieldset>div {
     display: grid;
-    gap: 0.5rem;
   }
 
   & section {
